bin/tests/errors/parser/parser_err_invalid_type.swg
#global fileprivate

enum A : enum { Z } // swc-expected-error {{parser_err_invalid_type}}
